<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wcs_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wcs_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@string/wcs_url" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_login"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@string/sip_login" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@string/sip_password" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_domain"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/sip_domain" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sip_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sip_port"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@string/sip_port" />

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:text="@string/register_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:id="@+id/register_required" />

            <TextView
                android:id="@+id/connect_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/connect_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_connect"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/callee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_callee"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/default_callee_name" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/googEchoCancellationCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/googechocancellation" />

            <CheckBox
                android:id="@+id/googAutoGainControlCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/googautogaincontrol" />

            <CheckBox
                android:id="@+id/googNoiseSupressionCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goognoisesupression" />

            <CheckBox
                android:id="@+id/googHighpassFilterCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/googhighpassfilter" />

            <CheckBox
                android:id="@+id/googEchoCancellation2CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/googechocancellation2" />

            <CheckBox
                android:id="@+id/googAutoGainControl2CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/googautogaincontrol2" />

            <CheckBox
                android:id="@+id/googNoiseSuppression2CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goognoiseSuppression2" />

            <CheckBox
                android:id="@+id/proximitySensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proximitySensor" />

            <CheckBox
                android:id="@+id/speakerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/speakerPhone" />

            <TextView
                android:id="@+id/call_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/call_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/action_call"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hold_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/action_hold"
                android:textStyle="bold" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>
